--- a/package.json
+++ b/package.json
@@ -4,21 +4,27 @@
   "private": true,
   "dependencies": {
     "aphrodite": "^1.2.1",
+    "axios": "^0.16.1",
     "bootstrap": "^4.0.0-alpha.6",
     "react": "^15.5.4",
     "react-addons-css-transition-group": "^15.5.2",
     "react-addons-transition-group": "^15.5.2",
     "react-css-modules": "^4.0.5",
     "react-dom": "^15.5.4",
+    "react-easy-swipe": "0.0.12",
+    "react-hammerjs": "^0.5.0",
     "react-id-swiper": "^1.4.0",
     "react-redux": "^5.0.4",
     "react-router": "^3.0.2",
     "react-router-redux": "^4.0.8",
     "react-style": "^0.5.5",
+    "react-swipe-component": "^1.3.1",
     "reactstrap": "^4.5.0",
     "redux": "^3.6.0",
     "redux-devtools-extension": "^2.13.1",
-    "redux-thunk": "^2.2.0"
+    "redux-thunk": "^2.2.0",
+    "transliteration": "^1.5.4",
+    "underscore": "^1.8.3"
   },
   "devDependencies": {
     "react-scripts": "0.9.5"
