--- a/package.json
+++ b/package.json
@@ -6,9 +6,14 @@
     "aphrodite": "^1.2.1",
     "axios": "^0.16.1",
     "bootstrap": "^4.0.0-alpha.6",
+    "moment": "^2.18.1",
+    "rc-time-picker": "^2.4.0",
     "react": "^15.5.4",
     "react-addons-css-transition-group": "^15.5.2",
     "react-addons-transition-group": "^15.5.2",
+    "react-bootstrap-time-picker": "^1.0.2",
+    "react-cookie": "^2.0.7",
+    "react-cookies": "0.0.1",
     "react-css-modules": "^4.0.5",
     "react-dom": "^15.5.4",
     "react-easy-swipe": "0.0.12",
