--- a/package.json
+++ b/package.json
@@ -2,11 +2,16 @@
   "name": "oldham",
   "version": "0.1.0",
   "private": true,
+  "homepage": "/",
   "dependencies": {
     "aphrodite": "^1.2.1",
     "axios": "^0.16.1",
     "bootstrap": "^4.0.0-alpha.6",
-    "moment": "^2.18.1",
+    "input-moment": "^0.3.2",
+    "js-cookie": "^2.1.4",
+    "less": "^2.7.2",
+    "less-loader": "^4.0.3",
+    "less-plugin-clean-css": "^1.5.1",
     "rc-time-picker": "^2.4.0",
     "react": "^15.5.4",
     "react-addons-css-transition-group": "^15.5.2",
@@ -15,15 +20,20 @@
     "react-cookie": "^2.0.7",
     "react-cookies": "0.0.1",
     "react-css-modules": "^4.0.5",
+    "react-datetime": "^2.8.10",
     "react-dom": "^15.5.4",
     "react-easy-swipe": "0.0.12",
+    "react-facebook-login": "^3.6.1",
     "react-hammerjs": "^0.5.0",
     "react-id-swiper": "^1.4.0",
+    "react-input-mask": "^0.8.0",
     "react-redux": "^5.0.4",
+    "react-responsive-image": "^3.3.5",
     "react-router": "^3.0.2",
     "react-router-redux": "^4.0.8",
     "react-style": "^0.5.5",
     "react-swipe-component": "^1.3.1",
+    "react-vk-login": "0.0.2",
     "reactstrap": "^4.5.0",
     "redux": "^3.6.0",
     "redux-devtools-extension": "^2.13.1",
@@ -33,6 +43,9 @@
   },
   "devDependencies": {
     "react-scripts": "0.9.5"
+  },
+  "peerDependencies": {
+    "moment": "^2.18.1"
   },
   "scripts": {
     "start": "react-scripts start",
