--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "aphrodite": "^1.2.1",
     "axios": "^0.16.1",
     "bootstrap": "^4.0.0-alpha.6",
+    "cyrillic-to-translit-js": "^1.0.2",
     "input-moment": "^0.3.2",
     "js-cookie": "^2.1.4",
     "less": "^2.7.2",
