--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react": "^15.5.4",
     "react-addons-css-transition-group": "^15.5.2",
     "react-addons-transition-group": "^15.5.2",
+    "react-axios": "^1.0.3",
     "react-bootstrap-time-picker": "^1.0.2",
     "react-cookie": "^2.0.7",
     "react-cookies": "0.0.1",
@@ -29,7 +30,6 @@
     "react-id-swiper": "^1.4.0",
     "react-input-mask": "^0.8.0",
     "react-redux": "^5.0.4",
-    "react-responsive-image": "^3.3.5",
     "react-router": "^3.0.2",
     "react-router-redux": "^4.0.8",
     "react-style": "^0.5.5",
