--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-router-redux": "^4.0.8",
     "react-style": "^0.5.5",
     "react-swipe-component": "^1.3.1",
+    "react-swipeable-tabs": "^2.2.0",
     "react-vk-login": "0.0.2",
     "reactstrap": "^4.5.0",
     "redux": "^3.6.0",
