--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "less": "^2.7.2",
     "less-loader": "^4.0.3",
     "less-plugin-clean-css": "^1.5.1",
+    "rc-tabs": "^9.1.4",
     "rc-time-picker": "^2.4.0",
     "react": "^15.5.4",
     "react-addons-css-transition-group": "^15.5.2",
